--- a/.github/workflows/dummy-tests.yaml
+++ b/.github/workflows/dummy-tests.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch: {}
   pull_request:
     paths:
-      - '.github'
+      - '.github/**'
       - 'README.md'
       - 'LICENCE'
       - 'Makefile'
