--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,18 +6,56 @@ on:
     branches:
       - main
 
+concurrency:
+  group: ${{ github.head_ref || github.ref_name }}
+  cancel-in-progress: true
+
 permissions:
   contents: write
   pull-requests: write
+  statuses: write
 
 jobs:
   verify-and-bump:
     uses: ./.github/workflows/bump-version.yaml
     
-  helm-test:
+  generate-helm-docs:
     needs: verify-and-bump
+    uses: ./.github/workflows/run-helm-docs.yaml
+    
+  helm-test:
+    needs: generate-helm-docs
     uses: ./.github/workflows/run-unittests.yaml
 
-  generate-helm-docs:
-    needs: helm-test
-    uses: ./.github/workflows/run-helm-docs.yaml
+  report-commit-status:
+    needs: [verify-and-bump, generate-helm-docs, helm-test]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    steps:
+      - name: Checkout final state
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+          ref: ${{ github.head_ref }}
+
+      - name: Create status check for final commit
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const finalSha = await github.rest.git.getRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: 'heads/${{ github.head_ref }}'
+            });
+            
+            await github.rest.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: finalSha.data.object.sha,
+              state: 'success',
+              context: 'ci/success',
+              description: 'CI completed successfully',
+              target_url: '${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+            });
+            
+            console.log('Status check created for final commit:', finalSha.data.object.sha);
