--- a/charts/miggo/values.yaml
+++ b/charts/miggo/values.yaml
@@ -254,6 +254,10 @@ miggoRuntime:
   nodeSelector:
     kubernetes.io/os: linux
 
+  # -- Tolerations for the miggo-runtime DaemonSet.  Global tolerations specified in
+  # .Values.tolerations will be merged with this list.
+  tolerations: []
+
   # -- When enabled, the chart will set the GOMEMLIMIT env var to 80% of the
   # configured resources.limits.memory. If no resources.limits.memory are
   # defined then enabling does nothing. It is HIGHLY recommend to enable this
