feat(scanner): allow annotating service account
This patch is useful to assing IAM roles to Kubernetes service account:

    miggoScanner:
      serviceAccount:
        annotations:
          "eks.amazonaws.com/role-arn": "arn:aws:iam::$account_id:role/my-role"

--- a/charts/miggo/templates/miggo-scanner/serviceaccount.yaml
+++ b/charts/miggo/templates/miggo-scanner/serviceaccount.yaml
@@ -5,9 +5,12 @@ metadata:
   name: {{ include "miggo.serviceAccountName" . }}-scanner
   labels:
     {{- include "miggo.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
+  {{- with .Values.serviceAccount.annotations }}
+    {{ toYaml . | nindent 4 }}
+  {{- end }}
+  {{- with .Values.miggoScanner.serviceAccount.annotations }}
+    {{ toYaml . | nindent 4 }}
   {{- end }}
 automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
 {{ end }}
