Add namespace to templates.
Signed-off-by: Josh Baird <jbaird@galileo.io>

--- a/charts/miggo/templates/image-pull-secret.yaml
+++ b/charts/miggo/templates/image-pull-secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: miggo-regcred
+  namespace: {{ .Release.Namespace }}
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ printf "{\"auths\":{\"%s\":{\"username\":\"%s\",\"password\":\"%s\"}}}" .Values.image.registry .Values.config.clientId .Values.config.accessKey | b64enc | quote }}
