--- a/charts/miggo/templates/miggo-collector/rolebinding.yaml
+++ b/charts/miggo/templates/miggo-collector/rolebinding.yaml
@@ -3,6 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: collector-role-binding
+  namespace: {{ .Release.Namespace }}
 subjects:
 - kind: ServiceAccount
   name: {{ include "miggo.serviceAccountName" . }}-collector
