--- a/charts/miggo/templates/miggo-runtime/daemonset.yaml
+++ b/charts/miggo/templates/miggo-runtime/daemonset.yaml
@@ -18,6 +18,7 @@ metadata:
   {{- with .Values.miggoRuntime.annotations }}
     {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
+  namespace: {{ .Release.Namespace }}
 spec:
   selector:
     matchLabels:
