--- a/charts/miggo/templates/miggo-scanner/deployment.yaml
+++ b/charts/miggo/templates/miggo-scanner/deployment.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "miggo.fullname" . }}-scanner
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "miggo.labels" . | nindent 4 }}
     {{- with .Values.labels }}
