--- a/charts/miggo/templates/miggo-runtime/serviceaccount.yaml
+++ b/charts/miggo/templates/miggo-runtime/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "miggo.fullname" . }}-runtime
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "miggo.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
