--- a/charts/miggo/templates/miggo-scanner/serviceaccount.yaml
+++ b/charts/miggo/templates/miggo-scanner/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "miggo.serviceAccountName" . }}-scanner
+  namespace: {{ include "miggo.namespace" . }}
   labels:
     {{- include "miggo.labels" . | nindent 4 }}
   annotations:
