--- a/charts/miggo/templates/access-key-secret.yaml
+++ b/charts/miggo/templates/access-key-secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: access-key-secret
+  namespace: {{ include "miggo.namespace" . }}
 type: Opaque
 data:
   ACCESS_KEY: {{ .Values.config.accessKey | b64enc | quote }}
