--- a/charts/miggo/templates/miggo-collector/collector-config-cm.yaml
+++ b/charts/miggo/templates/miggo-collector/collector-config-cm.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: collector-config-cm
+  namespace: {{ include "miggo.namespace" . }}
 data:
   collector-init-script.sh: |
     {{ .Files.Get "files/collector-init-script.sh" | nindent 4 }}
