--- a/charts/miggo/templates/miggo-collector/deployment.yaml
+++ b/charts/miggo/templates/miggo-collector/deployment.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: {{ if .Values.miggoCollector.instancePerNode }}DaemonSet{{ else }}Deployment{{ end }}
 metadata:
   name: {{ include "miggo.fullname" . }}-collector
+  namespace: {{ include "miggo.namespace" . }}
   labels:
     {{- include "miggo-collector.labels" . | nindent 4 }}
     {{- with .Values.labels }}
