--- a/charts/miggo/templates/miggo-collector/service.yaml
+++ b/charts/miggo/templates/miggo-collector/service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: miggo-collector
+  namespace: {{ include "miggo.namespace" . }}
   {{- with .Values.miggoCollector.service.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
