--- a/charts/miggo/templates/miggo-collector/serviceaccount.yaml
+++ b/charts/miggo/templates/miggo-collector/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "miggo.serviceAccountName" . }}-collector
+  namespace: {{ include "miggo.namespace" . }}
   labels:
     {{- include "miggo-collector.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
