--- a/charts/miggo/templates/miggo-runtime/role.yaml
+++ b/charts/miggo/templates/miggo-runtime/role.yaml
@@ -40,6 +40,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: {{ include "miggo.fullname" . }}-analyzer-role
+  namespace: {{ include "miggo.namespace" . }}
   labels:
   {{- include "miggo.labels" . | nindent 4 }}
 rules:
