--- a/charts/miggo/templates/miggo-runtime/rolebinding.yaml
+++ b/charts/miggo/templates/miggo-runtime/rolebinding.yaml
@@ -12,7 +12,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ include "miggo.fullname" . }}-runtime
-  namespace: '{{ .Release.Namespace }}'
+  namespace: '{{ include "miggo.namespace" . }}'
 {{- end }}
 
 {{- if and .Values.miggoRuntime.enabled (eq .Values.config.platform "openshift") }}
@@ -30,7 +30,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ include "miggo.fullname" . }}-runtime
-    namespace: '{{ .Release.Namespace }}'
+    namespace: '{{ include "miggo.namespace" . }}'
 {{- end }}
 ---
 {{- if .Values.miggoRuntime.analyzer.enabled }}
@@ -38,6 +38,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: {{ include "miggo.fullname" . }}-analyzer
+  namespace: {{ include "miggo.namespace" . }}
   labels:
   {{- include "miggo.labels" . | nindent 4 }}
 roleRef:
@@ -47,5 +48,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ include "miggo.fullname" . }}-runtime
-  namespace: '{{ .Release.Namespace }}'
+  namespace: '{{ include "miggo.namespace" . }}'
 {{- end }}
