--- a/charts/miggo/templates/miggo-scanner/role.yaml
+++ b/charts/miggo/templates/miggo-scanner/role.yaml
@@ -32,6 +32,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: miggo-scanner-role
+  namespace: {{ include "miggo.namespace" . }}
 rules:
 - apiGroups: [""]
   resources: ["configmaps"]
