--- a/charts/miggo/templates/miggo-scanner/rolebinding.yaml
+++ b/charts/miggo/templates/miggo-scanner/rolebinding.yaml
@@ -6,7 +6,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: {{ include "miggo.serviceAccountName" . }}-scanner
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ include "miggo.namespace" . }}
 roleRef:
   kind: ClusterRole
   name: miggo-scanner-cluster-role
@@ -18,10 +18,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: miggo-scanner-role-binding
+  namespace: {{ include "miggo.namespace" . }}
 subjects:
 - kind: ServiceAccount
   name: {{ include "miggo.serviceAccountName" . }}-scanner
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ include "miggo.namespace" . }}
 roleRef:
   kind: Role
   name: miggo-scanner-role
