--- a/charts/miggo/tests/namespace-override/test.yaml
+++ b/charts/miggo/tests/namespace-override/test.yaml
@@ -1,13 +1,20 @@
 suite: test namespace override
 templates:
+  # Workloads
+  - miggo-collector/deployment.yaml
+  - miggo-scanner/deployment.yaml
+  - miggo-watch/deployment.yaml
+  # RBAC
   - miggo-collector/rolebinding.yaml
   - miggo-scanner/rolebinding.yaml
-  - miggo-watch/rolebinding.yaml
-  - miggo-scanner/deployment.yaml
-  - miggo-collector/deployment.yaml
-  - miggo-collector/serviceaccount.yaml
-  - miggo-collector/service.yaml
   - miggo-collector/role.yaml
+  - miggo-collector/serviceaccount.yaml
+  # Network
+  - miggo-collector/service.yaml
+  # Config & Secrets
+  - miggo-collector/collector-config-cm.yaml
+  - access-key-secret.yaml
+  - image-pull-secret.yaml
 tests:
   - it: should use custom namespace in collector deployment metadata
     template: miggo-collector/deployment.yaml
@@ -60,6 +67,34 @@ tests:
 
   - it: should use custom namespace in role
     template: miggo-collector/role.yaml
+    asserts:
+      - equal:
+          path: metadata.namespace
+          value: miggo-custom
+
+  - it: should use custom namespace in watch deployment metadata
+    template: miggo-watch/deployment.yaml
+    asserts:
+      - equal:
+          path: metadata.namespace
+          value: miggo-custom
+
+  - it: should use custom namespace in configmap
+    template: miggo-collector/collector-config-cm.yaml
+    asserts:
+      - equal:
+          path: metadata.namespace
+          value: miggo-custom
+
+  - it: should use custom namespace in access-key secret
+    template: access-key-secret.yaml
+    asserts:
+      - equal:
+          path: metadata.namespace
+          value: miggo-custom
+
+  - it: should use custom namespace in image-pull secret
+    template: image-pull-secret.yaml
     asserts:
       - equal:
           path: metadata.namespace
