--- a/charts/miggo/tests/namespace-override/test.yaml
+++ b/charts/miggo/tests/namespace-override/test.yaml
@@ -1,37 +1,46 @@
 suite: test namespace override
+
+release:
+  name: test-release
+  namespace: default
+
 templates:
   # Workloads
-  - miggo-collector/deployment.yaml
-  - miggo-scanner/deployment.yaml
-  - miggo-watch/deployment.yaml
+  - templates/miggo-collector/deployment.yaml
+  - templates/miggo-scanner/deployment.yaml
+  - templates/miggo-watch/deployment.yaml
   # RBAC
-  - miggo-collector/rolebinding.yaml
-  - miggo-scanner/rolebinding.yaml
-  - miggo-collector/role.yaml
-  - miggo-collector/serviceaccount.yaml
+  - templates/miggo-collector/rolebinding.yaml
+  - templates/miggo-scanner/rolebinding.yaml
+  - templates/miggo-collector/role.yaml
+  - templates/miggo-collector/serviceaccount.yaml
   # Network
-  - miggo-collector/service.yaml
+  - templates/miggo-collector/service.yaml
   # Config & Secrets
-  - miggo-collector/collector-config-cm.yaml
-  - access-key-secret.yaml
-  - image-pull-secret.yaml
+  - templates/miggo-collector/collector-config-cm.yaml
+  - templates/access-key-secret.yaml
+  - templates/image-pull-secret.yaml
+
+values:
+  - values.yaml
+
 tests:
   - it: should use custom namespace in collector deployment metadata
-    template: miggo-collector/deployment.yaml
+    template: templates/miggo-collector/deployment.yaml
     asserts:
       - equal:
           path: metadata.namespace
           value: miggo-custom
 
   - it: should use custom namespace in scanner deployment metadata
-    template: miggo-scanner/deployment.yaml
+    template: templates/miggo-scanner/deployment.yaml
     asserts:
       - equal:
           path: metadata.namespace
           value: miggo-custom
 
   - it: should use custom namespace in rolebinding metadata
-    template: miggo-collector/rolebinding.yaml
+    template: templates/miggo-collector/rolebinding.yaml
     asserts:
       - equal:
           path: metadata.namespace
@@ -41,7 +50,7 @@ tests:
           value: miggo-custom
 
   - it: should use custom namespace in scanner rolebinding
-    template: miggo-scanner/rolebinding.yaml
+    template: templates/miggo-scanner/rolebinding.yaml
     documentIndex: 1
     asserts:
       - equal:
@@ -52,61 +61,61 @@ tests:
           value: miggo-custom
 
   - it: should use custom namespace in serviceaccount
-    template: miggo-collector/serviceaccount.yaml
+    template: templates/miggo-collector/serviceaccount.yaml
     asserts:
       - equal:
           path: metadata.namespace
           value: miggo-custom
 
   - it: should use custom namespace in service
-    template: miggo-collector/service.yaml
+    template: templates/miggo-collector/service.yaml
     asserts:
       - equal:
           path: metadata.namespace
           value: miggo-custom
 
   - it: should use custom namespace in role
-    template: miggo-collector/role.yaml
+    template: templates/miggo-collector/role.yaml
     asserts:
       - equal:
           path: metadata.namespace
           value: miggo-custom
 
   - it: should use custom namespace in watch deployment metadata
-    template: miggo-watch/deployment.yaml
+    template: templates/miggo-watch/deployment.yaml
     asserts:
       - equal:
           path: metadata.namespace
           value: miggo-custom
 
   - it: should use custom namespace in configmap
-    template: miggo-collector/collector-config-cm.yaml
+    template: templates/miggo-collector/collector-config-cm.yaml
     asserts:
       - equal:
           path: metadata.namespace
           value: miggo-custom
 
   - it: should use custom namespace in access-key secret
-    template: access-key-secret.yaml
+    template: templates/access-key-secret.yaml
     asserts:
       - equal:
           path: metadata.namespace
           value: miggo-custom
 
   - it: should use custom namespace in image-pull secret
-    template: image-pull-secret.yaml
+    template: templates/image-pull-secret.yaml
     asserts:
       - equal:
           path: metadata.namespace
           value: miggo-custom
 
   - it: should use custom namespace in service URLs
-    template: miggo-scanner/deployment.yaml
+    template: templates/miggo-scanner/deployment.yaml
     asserts:
-      - matchRegex:
+      - contains:
           path: spec.template.spec.containers[0].args
-          pattern: ".*http://miggo-collector.miggo-custom.svc.cluster.local:4318.*"
-      - matchRegex:
+          content: --otlp-endpoint=http://miggo-collector.miggo-custom.svc.cluster.local:4318
+      - contains:
           path: spec.template.spec.containers[0].args
-          pattern: ".*--cache-cm-namespace=miggo-custom.*"
+          content: --cache-cm-namespace=miggo-custom
 
