feat: specify default enabled tracers for miggo-profiler
Tracers such as the `labels` tracer create a lot of warning noise and
are not even provide data that is being used. It hence has been disabled
by default.

Towards: SEN-170

--- a/charts/miggo/templates/miggo-runtime/daemonset.yaml
+++ b/charts/miggo/templates/miggo-runtime/daemonset.yaml
@@ -162,6 +162,7 @@ spec:
             - -monitor-interval={{ .Values.miggoRuntime.profiler.monitorInterval }}
             - -probabilistic-threshold={{ .Values.miggoRuntime.profiler.probabilisticThreshold }}
             - -probabilistic-interval={{ .Values.miggoRuntime.profiler.probabilisticInterval }}
+            - -tracers={{ join "," .Values.miggoRuntime.profiler.enabledTracers }}
           {{- range $key, $value := .Values.miggoRuntime.profiler.extraArgs }}
             - "--{{ $key }}={{ $value }}"
           {{- end }}
