--- a/charts/miggo/tests/runtime-profiler/test.yaml
+++ b/charts/miggo/tests/runtime-profiler/test.yaml
@@ -99,6 +99,7 @@ tests:
             - -monitor-interval=5s
             - -probabilistic-threshold=100
             - -probabilistic-interval=1m0s
+            - -tracers=perl,php,python,hotspot,ruby,v8,dotnet,go
       - equal:
           path: spec.template.spec.containers[?(@.name == "profiler")].securityContext
           value:
@@ -154,3 +155,4 @@ tests:
             - -monitor-interval=5s
             - -probabilistic-threshold=1
             - -probabilistic-interval=1m0s
+            - -tracers=perl,php,python,hotspot,ruby,v8,dotnet,go
