--- a/charts/miggo/templates/miggo-collector/deployment.yaml
+++ b/charts/miggo/templates/miggo-collector/deployment.yaml
@@ -204,4 +204,7 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if .Values.miggoCollector.instancePerNode }}
+      priorityClassName: system-node-critical
+      {{- end }}
 {{ end }}
