add priorityClassName to collector if instance per node (#179)
* add priorityClassName to collector if instance per node

* [AUTO GITHUB] Bump chart versions

* [AUTO GITHUB] Chart README.md

* collector always needs to be system-node-critical

---------

Co-authored-by: dvdlevanon-miggo <174447273+dvdlevanon-miggo@users.noreply.github.com>

--- a/charts/miggo/templates/miggo-collector/deployment.yaml
+++ b/charts/miggo/templates/miggo-collector/deployment.yaml
@@ -204,4 +204,5 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      priorityClassName: system-node-critical
 {{ end }}
