--- a/charts/miggo/templates/miggo-runtime/daemonset.yaml
+++ b/charts/miggo/templates/miggo-runtime/daemonset.yaml
@@ -134,6 +134,9 @@ spec:
           - name: debugfs
             mountPath: /sys/kernel/debug
             readOnly: true
+          - name: tracefs
+            mountPath: /sys/kernel/tracing
+            readOnly: true
           {{- if .Values.miggoRuntime.profiler.enabled }}
           - name: unix-socket
             mountPath: /tmp/grpc
@@ -191,6 +194,9 @@ spec:
           volumeMounts:
             - name: debugfs
               mountPath: /sys/kernel/debug
+              readOnly: true
+            - name: tracefs
+              mountPath: /sys/kernel/tracing
               readOnly: true
             - name: cgroupfs
               mountPath: /cgroup
@@ -277,6 +283,9 @@ spec:
       - name: debugfs
         hostPath:
           path: /sys/kernel/debug
+      - name: tracefs
+        hostPath:
+          path: /sys/kernel/tracing
       {{- if .Values.miggoRuntime.profiler.enabled }}
       - name: unix-socket
         emptyDir: { }
