--- a/charts/miggo/templates/miggo-runtime/daemonset.yaml
+++ b/charts/miggo/templates/miggo-runtime/daemonset.yaml
@@ -26,6 +26,7 @@ spec:
   template:
     metadata:
       annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/miggo-runtime/fluent-bit-cm.yaml") . | sha256sum }}
       {{- with .Values.podAnnotations }}
         {{- tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
@@ -203,6 +204,38 @@ spec:
               readOnly: true
             - name: unix-socket
               mountPath: /tmp/grpc
+        - name: profiler-logs
+          image: fluent/fluent-bit:latest
+          env:
+            - name: POD_UID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.uid
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+          command:
+            - /fluent-bit/bin/fluent-bit
+            - -c
+            - /fluent-bit/etc/fluent-bit.yaml
+          volumeMounts:
+            - name: host-var
+              mountPath: /var
+              readOnly: true
+            - name: fluent-bit-config
+              mountPath: /fluent-bit/etc
+          resources:
+            requests:
+              memory: "50Mi"
+              cpu: "50m"
+            limits:
+              memory: "100Mi"
+              cpu: "100m"
         {{- end }}
         {{- if .Values.miggoRuntime.analyzer.enabled }}
         - name: analyzer
@@ -280,6 +313,13 @@ spec:
       hostIPC: {{ .Values.miggoRuntime.hostIPC }}
       hostPID: {{ .Values.miggoRuntime.hostPID }}
       volumes:
+      - name: fluent-bit-config
+        configMap:
+          name: profiler-fluent-bit-config
+      - name: host-var
+        hostPath:
+          path: /var
+          type: Directory
       - name: debugfs
         hostPath:
           path: /sys/kernel/debug
